--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,10 @@
 #
 #    pip-compile --output-file=requirements.txt requirements.in
 #
-aiohttp==3.6.2
-    # via cloudfoundry-client
+aiohttp==3.7.4
+    # via
+    #   -r requirements.in
+    #   cloudfoundry-client
 asgiref==3.3.1
     # via django
 async-timeout==3.0.1
@@ -20,7 +22,7 @@ chardet==3.0.4
     # via
     #   aiohttp
     #   requests
-cloudfoundry-client==1.15.0
+cloudfoundry-client==1.16.0
     # via -r requirements.in
 dj-database-url==0.5.0
     # via -r requirements.in
@@ -30,7 +32,7 @@ django-jquery==3.1.0
     # via -r requirements.in
 django-staff-sso-client==3.1.0
     # via -r requirements.in
-django==3.1.4
+django==3.1.6
     # via
     #   -r requirements.in
     #   django-jquery
@@ -51,6 +53,8 @@ oauthlib==3.1.0
     # via requests-oauthlib
 pdpyras==4.1.2
     # via -r requirements.in
+polling2==0.4.6
+    # via cloudfoundry-client
 protobuf==3.6.1
     # via cloudfoundry-client
 psycopg2-binary==2.8.6
@@ -59,7 +63,7 @@ python-dotenv==0.15.0
     # via -r requirements.in
 pytz==2020.4
     # via django
-pyyaml==5.3.1
+pyyaml==5.4.1
     # via cloudfoundry-client
 raven==6.10.0
     # via -r requirements.in
@@ -68,6 +72,7 @@ requests-oauthlib==1.3.0
 requests==2.25.1
     # via
     #   -r requirements.in
+    #   cloudfoundry-client
     #   oauth2-client
     #   pdpyras
     #   requests-oauthlib
@@ -79,8 +84,11 @@ six==1.15.0
     #   websocket-client
 sqlparse==0.4.1
     # via django
-urllib3==1.26.2
+typing-extensions==3.7.4.3
+    # via aiohttp
+urllib3==1.26.4
     # via
+    #   -r requirements.in
     #   pdpyras
     #   requests
     #   sentry-sdk
