--- a/requirements.in
+++ b/requirements.in
@@ -1,6 +1,6 @@
 aiohttp>=3.7.4
 dj-database-url
-django==3.1.14
+django==3.2
 django-environ
 django-jquery
 psycopg2-binary
@@ -13,6 +13,6 @@ cloudfoundry-client>=1.16.0
 whitenoise
 gunicorn
 pdpyras
-urllib3==1.26.5
+urllib3>=1.26.5
 protobuf>=3.19.5
 oauthlib==3.2.1
