--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ psycopg2-binary = "^2.9.9"
 python-dotenv = "^1.0.1"
 requests = "^2.32.3"
 raven = "^6.10.0"
-sentry-sdk = "1.14.0"
+sentry-sdk = "^2.8.0"
 django-staff-sso-client = "4.2.1"
 cloudfoundry-client = ">=1.16.0"
 whitenoise = "^6.7.0"
